# backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  docker.yml
.sqlx/: query-5c3017f5546167d2c10712f508d538195194c491ec822f9c472c27c3b126a8cb.json  query-9cc9fc748e4854a7d1704899db49c17b7112375eaaf0ac33344642a88f05a8e0.json
migrations/: 0001_create_categories.sql  0002_create_wants.sql  0003_create_want_scores.sql  0004_add_wants_indexes.sql  0005_want_scores_unique.sql  0006_extend_users.sql  0007_create_feature_flags.sql
src/: config.rs  errors.rs  main.rs
src/broker/: categories_consumer.rs  consumer.rs  dlq.rs  mod.rs  publisher.rs
src/db/: analytics.rs  categories.rs  feature_flags.rs  mod.rs  users.rs  wants.rs
src/handlers/: admin.rs  analytics.rs  auth.rs  categories.rs  health.rs  mod.rs  users.rs  wants.rs
src/middleware/: auth.rs  role.rs
src/models/: analytics.rs  auth.rs  categories_event.rs  category.rs  feature_flag.rs  mod.rs  user.rs  want.rs
src/services/: analytics.rs  auth.rs  mod.rs  wants.rs
